header files: added navbar shadow, changed font, changed coloring, modified small screen navbar; campus files: modified size of 'start your trade' button', fixed campus image gap

--- a/app/assets/stylesheets/campus.css.scss
+++ b/app/assets/stylesheets/campus.css.scss
@@ -30,25 +30,44 @@
   }
 }
 
-.first-screen-button {
-  display: block;
-  margin-left: 33%;
-  margin-right: 33%;
-  margin-top: 50px;
-  padding: 10px 0px 10px 0px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #ECF0F1;
-  background-color: none;
-  cursor: pointer;
-  color: #ECF0F1;
-  text-decoration: none;
+@media (max-width: 767px ){
+  .first-screen-button {
+    display: block;
+    margin-left: 33%;
+    margin-right: 33%;
+    margin-top: 50px;
+    padding: 10px 4px 10px 4px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #ECF0F1;
+    background-color: none;
+    cursor: pointer;
+    color: #ECF0F1;
+    text-decoration: none;
+    font-size: 16px;
 
-  transition-duration: 1s;
+    transition-duration: 1s;
+  }
 }
 
-#startButton {
-  font-size: 30px;
+@media (min-width: 768px) {
+  .first-screen-button {
+    display: block;
+    margin-left: 33%;
+    margin-right: 33%;
+    margin-top: 50px;
+    padding: 10px 10px 10px 10px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #ECF0F1;
+    background-color: none;
+    cursor: pointer;
+    color: #ECF0F1;
+    text-decoration: none;
+    font-size: 20px;
+
+    transition-duration: 1s;
+  }
 }
 
 .first-screen-button:hover {
@@ -66,6 +85,7 @@
   height: 300px;
   padding:0;
   overflow: hidden;
+  max-height: 250px;
 }
 
 .thumb img {
